compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__use___arity_3.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/use_.rs
assertion_line: 39
expression: "\npub fn main() {\n  use <- trip(1.0, \"\")\n  123\n}\n\nfn trip(x, y, f) {\n  let z = f()\n  #(x, y, z)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  use <- trip(1.0, "")
  123
}

fn trip(x, y, f) {
  let z = f()
  #(x, y, z)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 7).
-spec trip(J, K, fun(() -> N)) -> {J, K, N}.
trip(X, Y, F) ->
    Z = F(),
    {X, Y, Z}.

-file("project/test/my/mod.gleam", 2).
-spec main() -> {float(), binary(), integer()}.
main() ->
    trip(1.0, <<""/utf8>>, fun() -> 123 end).
