compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__use___pipeline_that_returns_fn.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/use_.rs
assertion_line: 69
expression: "\npub fn main() {\n  use <- 1 |> add\n  1\n}\n\npub fn add(x) {\n  fn(f) { f() + x }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  use <- 1 |> add
  1
}

pub fn add(x) {
  fn(f) { f() + x }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([add/1, main/0]).

-file("project/test/my/mod.gleam", 7).
-spec add(integer()) -> fun((fun(() -> integer())) -> integer()).
add(X) ->
    fun(F) -> F() + X end.

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    begin
        _pipe = 1,
        add(_pipe)
    end(fun() -> 1 end).
